# fsl-conda-installer

./: .gitlab-ci.yml  CHANGELOG.md  README.md  fsl-packages.txt  fslinstaller.py  generate_environment_spec.py  pyproject.toml  test_register.py
.ci/: check_version.sh  new_release.py  new_release.sh  unit_tests.sh  update_manifest.py
fsl/: fslinstaller.py
fsl/installer/: __init__.py  createFSLWrapper.py  fslinstaller.py  removeFSLWrapper.py
test/: __init__.py  test_context.py  test_create_remove_wrapper.py  test_installer.py  test_installer_cuda.py  test_installer_extra_environments.py  test_installer_m1_fallback.py  test_installer_micromamba.py  test_process.py  test_progress.py  test_routines.py
test/data/: manifest.json
